<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inputActivity">

    <Space
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="5" />

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="90"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="10" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="10"
            android:lineSpacingExtra="16sp"
            android:text="@string/enter_the_student_details"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="5" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="35">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/student_name"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/address"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/phone_number"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/homeTel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/home_tel"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/firstParent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/first_parent"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/firstTel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/phone_number"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/secParent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/second_parent"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/secTel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/phone_number"
                    android:inputType="phone" />
            </LinearLayout>
        </ScrollView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="25" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="10"
            android:orientation="horizontal">

            <Space
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/save"
                android:onClick="saveData"
                app:backgroundTint="@color/cardview_dark_background" />

            <Space
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="5" />

    </LinearLayout>

    <Space
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="5" />

</LinearLayout>